is/Advanced/routes/wso2is-route.yaml
# Copyright (c) 2018, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Route
metadata:
  name: wso2is-route
  annotations:
    # Disable the Sticky Sessions
    # haproxy.router.openshift.io/disable_cookies: "true"
    haproxy.router.openshift.io/balance: "roundrobin"
spec:
  host: wso2is
  port:
    targetPort: servlet-https
  to:
    kind: Service
    name: wso2is-service
  tls:
    termination: passthrough
